--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
              <head>
                          <meta charset="utf-8"> 
                          <title>tsaikhemse</title>
-			<link rel="stylesheet" type="text/css" href="./style.css.css">
+			<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 		
              </head>
              <body>
