css style update

--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
 					  იტალიური სამზარეულო
 				  </h1>
 			  <p class="h1">
-					იტლიური სამზარეულო
+					განუმეორებელი კერძების ასორტიმენტი
 					<br>
-					ასორტიმენტი იტალიური
-					<br>
-					სამზარეულოდან
+					 იტალიური სამზარეულოდან
 			  </p>
 			  <a class="first" id="btn" href="#hero menu" type="button">ვრცლად</a>
-				  <img class="hero-image" src="">
+				  <img class="hero-image" src="./assets/images/Main.png">
 				  </section>
 					  <a class="scroll" href="hero menu" type="button"> 
-						  "დაუყევი საიტს"
+						  დაუყევი საიტს
 					  </a>
 			  </div>
 			  <section>
@@ -142,4 +140,5 @@
 					<img src="" alt="გადახდის მეთოდები">
 				</footer>
 			</body>
+			</html>
 		
