--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 						  დაუყევი საიტს
 					  </a>
 			  </div>
-			  <section>
+			  <section class="hero-menu" id="hero-menu">
 				  <h1>
 					იტალიური პასტა
 				  </h1>
-				  <ul>
+				  <ul class="pasta">
 					  <li>
 						  <img class data-src="./assets/images/1.png" src="./assets/images/1.png">
 						  <h2>
@@ -125,12 +125,11 @@
 					</li>
 				  </ul>
 			  </section>
-			  
-			  <address>მიჩკევიჩის #7 ა, პირველი სადარაზო </address>
+			  <footer id="footer-menu">
+			  <address>მიჩკევიჩის #7 ა, პირველი სადარაზო (+995) 595 494 303 </address>
 			  <a href="tel:00995595494303"> (+995) 595 494 303 </a>
 			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.8255042154174!2d44.74262371530082!3d41.72428407923463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731a6fc8bef9%3A0x3df10450ad508866!2s43+Alexander+Kazbegi+Ave%2C+T'bilisi!5e0!3m2!1sru!2sge!4v1566564050881!5m2!1sru!2sge" width="550" height="320" frameborder="0" style="border:0" allowfullscreen="">
 			</iframe>
-				<footer>
 					<a href="" src=""><img src="" alt="SmartAcademy"></a>
 					<div>
 						<a href="#!"> <img href="" src="" alt="Facebok"></a>
