lasts update css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
              <body>
 				<header>
 					<img src="./assets/images/logo.svg">
-					  <nav>
-						  <ul>
+					  <nav id="menu" class="open">
+						  <ul class="bar" >
 							  <li>
-								  <a href="#hero menu"> პროდუქცია</a>
+								  <a href="#hero-menu"> პროდუქცია</a>
 		  
 							  </li>
 						  <li>
-								  <a href="#footer menu"> კონტაქტი</a>
+								  <a href="#footer-menu" > კონტაქტი</a>
 						  </li>
 					  </ul>
 				  </nav>
@@ -31,10 +31,10 @@
 					<br>
 					 იტალიური სამზარეულოდან
 			  </p>
-			  <a class="first" id="btn" href="#hero menu" type="button">ვრცლად</a>
+			  <a class="first" id="btn" href="#hero-menu" type="button">ვრცლად</a>
 				  <img class="hero-image" src="./assets/images/Main.png">
 				  </section>
-					  <a class="scroll" href="hero menu" type="button"> 
+					  <a class="scroll" href="#hero-menu" type="button"> 
 						  დაუყევი საიტს
 					  </a>
 			  </div>
@@ -114,7 +114,7 @@
 						<h2>
 							სპაგეტი
 							<br>
-							 "კარბორანა"
+							 კარბორანა
 						</h2>
 						<p>
 							სპაგეტი,კვერცხი,არაჟანი
@@ -127,17 +127,22 @@
 			  </section>
 			  <footer id="footer-menu">
 			  <address>მიჩკევიჩის #7 ა, პირველი სადარაზო (+995) 595 494 303 </address>
-			  <a href="tel:00995595494303"> (+995) 595 494 303 </a>
+			  <!-- <a href="tel:00995595494303"> (+995) 595 494 303 </a> -->
 			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.8255042154174!2d44.74262371530082!3d41.72428407923463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731a6fc8bef9%3A0x3df10450ad508866!2s43+Alexander+Kazbegi+Ave%2C+T'bilisi!5e0!3m2!1sru!2sge!4v1566564050881!5m2!1sru!2sge" width="550" height="320" frameborder="0" style="border:0" allowfullscreen="">
 			</iframe>
-					<a href="" src=""><img src="" alt="SmartAcademy"></a>
-					<div>
-						<a href="#!"> <img href="" src="" alt="Facebok"></a>
-						<a href="#!"> <img href="" src="" alt="Instagram"></a>
-						<a href="#!"> <img href="" src="" alt="Youtube"></a>
+			<div class="hero-logos">
+				<section class="logos">
+					<a href="https://smartacademy.ge/"> <img href="" src="./assets/images/academy-logo.png" alt="SmartAcademy"></a>
+					<div class="logos1">
+					<a href="#!"> <img href="" src="./assets/images/Facebook.svg" alt="Facebok"></a>
+					<a href="#!"> <img href="" src="./assets/images/Instagram.svg" alt="Instagram"></a>
+					<a href="#!"> <img href="" src="./assets/images/youtube.svg" alt="Youtube"></a>
 					</div>
-					<img src="" alt="გადახდის მეთოდები">
+					<img src="./assets/images/Cards.svg" alt="გადახდის მეთოდები">
+				</section>
+				</div>
 				</footer>
+				<script type="text/javascript" src="./assets/js/script.js"></script>
 			</body>
 			</html>
 		
